--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-    "name": "node-example",
-    "version": "0.0.1",
-    "dependencies": {
-        "express": "3.1.x"
-    },
-    "engines": {
-        "node": "0.10.x",
-        "npm": "1.2.x"
-    }
+  "name": "application-name",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "express": "3.1.2",
+    "ejs": "*"
+  }
 }
