Primeros intentos con oauth de github, ahora solo falta hacer la diferenciacion entre los guests y guithub

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "*",
     "socket.io": "0.9.16",
     "request": "*",
-    "firebase": "0.5.4"
+    "firebase": "0.5.4",
+    "github": "*"
   }
 }
